--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <header>
       <div class="container">
-        <a href="/">
+        <a href="./index.html">
           <h1 class="logo">Where in the world?</h1>
         </a>
         <div class="mode-container">
