transition to scss

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Country API</title>
     <!-- Style -->
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./index.css" />
   </head>
 
   <body>
@@ -35,7 +35,7 @@
           </div>
           <!-- Dropdown -->
           <div class="dropdown">
-            <span>Filter by Region</span>
+            <span class="filter">Filter by Region</span>
             <div class="chevron">
               <img src="./assets/icons/chevron.svg" alt="chevron" />
             </div>
