--- a/countryPage/country.html
+++ b/countryPage/country.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="dark" lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -19,7 +19,7 @@
         </div>
       </div>
     </header>
-    
+
     <!-- Script -->
     <script src="./script.js"></script>
   </body>
