countryPage html complete

--- a/countryPage/country.html
+++ b/countryPage/country.html
@@ -20,6 +20,58 @@
       </div>
     </header>
 
+    <main>
+      <div class="container">
+        <button id="back-btn">
+          <img src="../assets/icons/back-arrow.svg" alt="back arrow" />
+          Back
+        </button>
+        <!-- Info Container -->
+        <div class="info-container">
+          <div class="flag">
+            <img src="../assets/images/usa-flag.jpg" alt="flag" />
+          </div>
+          <!-- Info -->
+          <div class="info">
+            <div class="main-info">
+              <!-- Left -->
+              <div class="left-side">
+                <h1>USA</h1>
+                <div class="wrapper">
+                  <p>Native Name:</p>
+                  <span id="native-name">America</span>
+                  <p>Population:</p>
+                  <span id="population">1000000</span>
+                  <p>Region:</p>
+                  <span id="region">Americas</span>
+                  <p>Sub Region:</p>
+                  <span id="sub-region">North America</span>
+                  <p>Capital:</p>
+                  <span id="capital">Washington</span>
+                </div>
+              </div>
+              <!-- Right -->
+              <div class="right-side">
+                <p>Top Level Domain:</p>
+                <span id="domain">.com</span>
+                <p>Currencies:</p>
+                <span id="currency">USD</span>
+                <p>Languages:</p>
+                <span id="lang">English</span>
+              </div>
+            </div>
+            <!-- Main info end -->
+            <!-- Border -->
+            <div class="border-info">
+              <p>Border Countries:</p>
+              <span id="border">Canada</span>
+              <span id="border">Mexico</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
+
     <!-- Script -->
     <script src="./script.js"></script>
   </body>
